Fix hero image spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -145,8 +145,6 @@ main {
 }
 
 .message-wrapper {
-    /* grid-row-start: 1;
-    grid-row-end: 2; */
     grid-row-start: end;
 }
 
@@ -158,14 +156,13 @@ main {
 
 .hero-image-container {
     position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero-image {
     width: 100%;
-    height: 100%;
 }
 
 .hero-image-content {
